# graftcp-rust

./: Cargo.toml  Makefile  README.md
graftcp/: Cargo.toml
graftcp-common/: Cargo.toml
graftcp-common/src/: config.rs  error.rs  fake_ip.rs  lib.rs  types.rs
graftcp-local/: Cargo.toml
graftcp-local/src/: fifo.rs  lib.rs  main.rs  proc_tracker.rs  proxy.rs  server.rs
graftcp/src/: fifo.rs  lib.rs  main.rs  ptrace.rs  seccomp.rs  tracer.rs
mgraftcp/: Cargo.toml
mgraftcp/src/: main.rs
seccomp-test/: Cargo.toml
seccomp-test/src/: main.rs  simple_test.rs
