[package]
name = "graftcp-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Common types and utilities for graftcp Rust implementation"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
nix.workspace = true
libc.workspace = true
toml.workspace = true
lazy_static = "1.4"