[package]
name = "graftcp-local"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local proxy server component for graftcp"

[[bin]]
name = "graftcp-local"
path = "src/main.rs"

[lib]
name = "graftcp_local"
path = "src/lib.rs"

[dependencies]
graftcp-common = { path = "../graftcp-common" }

# Async networking
tokio.workspace = true
tokio-util.workspace = true

# Network protocols
socks.workspace = true

# CLI
clap.workspace = true

# Config and serialization
serde.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
bytes.workspace = true
uuid.workspace = true
glob.workspace = true
rand.workspace = true
libc.workspace = true