[package]
name = "graftcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Library for process tracing and connection redirection"

[lib]
name = "graftcp"
path = "src/lib.rs"

[dependencies]
graftcp-common = { path = "../graftcp-common" }

# System calls and process control
nix.workspace = true
libc.workspace = true

# CLI
clap.workspace = true

# Config and serialization
serde.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true

# Seccomp BPF support  
libseccomp = { workspace = true }