[package]
name = "mgraftcp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Combined graftcp and graftcp-local in a single binary"

[[bin]]
name = "mgraftcp"
path = "src/main.rs"

[dependencies]
graftcp-common = { path = "../graftcp-common" }
graftcp-local = { path = "../graftcp-local" }
graftcp = { path = "../graftcp" }

# System calls and process control
nix.workspace = true
libc.workspace = true

# Async networking
tokio.workspace = true
tokio-util.workspace = true

# Network protocols
socks.workspace = true

# CLI
clap.workspace = true

# Config and serialization
serde.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
bytes.workspace = true
uuid.workspace = true
tempfile.workspace = true